FIXUP: wrap

--- a/src/components/bundle-chunk-modules/bundle-chunk-modules.module.css
+++ b/src/components/bundle-chunk-modules/bundle-chunk-modules.module.css
@@ -12,6 +12,12 @@
 
 .name {
   border-bottom: 1px dotted transparent;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+  word-break: break-word;
+  hyphens: auto;
+  white-space: normal;
 }
 
 .nameTooltipText {
